<resources>
    <string name="app_name">Schmurvey</string>
    <string name="title_activity_single_survey_multiple_check">Fill out Schmurvey
    </string>
    <string name="title_activity_single_survey">Fill out Schmurvey</string>
    <string name="title_activity_single_result">Results</string>
    <string name="title_activity_new_survey">Create Schmurvey</string>
    <string name="title_activity_new_survey_questions">Enter Question</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="own_schmurveys">Your Schmurveys</string>
    <string name="all_schmurveys">All Schmurveys</string>

    <string name="SingleSurveyTest">this is a test</string>
    <string name="show_all">Show all</string>



    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="keep_logged_in">Keep me logged in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_no_password">No password was entered</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="MultipleChoiceActivitySubmit">Submit</string>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>

    <string-array name="numbers_short">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="numbers_long">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
